# shared-embeddings-space-experiments

./: .env.example  README.md  main.py  pyproject.toml
data/: coffee_paraphrases.json  paraphrases.json
notebooks/: 01_paraphrase_similarity.ipynb  02_population_diversity.ipynb  03_cross_model_comparison.ipynb
src/embeddings_space/: __init__.py  diversity.py  embeddings.py  metrics.py
